--- a/GP_app/app/src/main/res/layout/activity_post.xml
+++ b/GP_app/app/src/main/res/layout/activity_post.xml
@@ -23,9 +23,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/readContentsView">
-
             </sdk.chat.gp_app.view.ReadContentsVIew>
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/activity_post_endDate"
+                android:text="Date"/>
+
+
         </LinearLayout>
+
+
     </ScrollView>
 
 </RelativeLayout>
