--- a/GP_app/app/src/main/res/layout/activity_write_post.xml
+++ b/GP_app/app/src/main/res/layout/activity_write_post.xml
@@ -55,7 +55,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/Date"
+                    android:id="@+id/endDate"
                     android:layout_width="60dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
@@ -72,6 +72,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
+                    android:id="@+id/peopleNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_weight="1"
