--- a/GP_app/app/src/main/res/layout/item_post.xml
+++ b/GP_app/app/src/main/res/layout/item_post.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Home화면에서 볼 때 나타나는 xml-->
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -60,6 +62,7 @@
             android:id="@+id/readContentsView">
 
         </sdk.chat.gp_app.view.ReadContentsVIew>
+
 
     </LinearLayout>
 
