--- a/GP_app/app/src/main/res/layout/view_post.xml
+++ b/GP_app/app/src/main/res/layout/view_post.xml
@@ -21,4 +21,11 @@
         android:gravity="end"
         tools:text="2019-04-25" />
 
+    <TextView
+        android:id="@+id/endDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        tools:text="N" />
+
 </merge>
