--- a/GP_app/app/src/main/res/drawable/ic_post_background.xml
+++ b/GP_app/app/src/main/res/drawable/ic_post_background.xml
@@ -2,12 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="#E3F4CE" />
+
     <corners
-        android:bottomLeftRadius="12dp"
-        android:bottomRightRadius="12dp"
-        android:topLeftRadius="12dp"
-        android:topRightRadius="12dp" />
+        android:bottomLeftRadius="3dp"
+        android:bottomRightRadius="3dp"
+        android:topLeftRadius="3dp"
+        android:topRightRadius="3dp" />
+
     <stroke
         android:width="1dp"
         android:color="@color/colormain2" />
