--- a/GP_app/app/src/main/res/layout/activity_comments.xml
+++ b/GP_app/app/src/main/res/layout/activity_comments.xml
@@ -48,14 +48,29 @@
         android:layout_height="wrap_content"
         android:id="@+id/toolbar"/>
 
-    <ListView
+    <!--<ListView
         android:id="@+id/commentListView"
         android:layout_width="393dp"
         android:layout_height="599dp"
         android:layout_below="@+id/toolbar">
 
 
-    </ListView>
+
+    </ListView>-->
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/toolbar">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 
 
@@ -65,7 +80,8 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:id="@+id/commentLinearLayout"
-        android:weightSum="10">
+        android:weightSum="10"
+        android:background="#D3D3D3">
 
         <EditText
             android:layout_width="1600sp"
