--- a/GP_app/app/src/main/res/layout/activity_login.xml
+++ b/GP_app/app/src/main/res/layout/activity_login.xml
@@ -14,15 +14,23 @@
         android:orientation="vertical"
         android:layout_below="@+id/toolbar">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_marginTop="100dp"
+            android:layout_height="80dp"
+            android:src="@drawable/world"
+            android:layout_marginBottom="20dp"/>
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="로그인"
             android:textColor="#000000"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,6 +57,7 @@
                 android:inputType="textPassword" />
 
             <Button
+                android:layout_marginTop="30dp"
                 android:id="@+id/loginButton"
                 android:background="@drawable/ic_button_background"
                 android:layout_width="match_parent"
