--- a/GP_app/app/src/main/res/layout/activity_sign_up.xml
+++ b/GP_app/app/src/main/res/layout/activity_sign_up.xml
@@ -14,10 +14,17 @@
         android:orientation="vertical"
         android:layout_below="@+id/toolbar">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_marginTop="50dp"
+            android:layout_height="80dp"
+            android:src="@drawable/world"
+            android:layout_marginBottom="20dp"/>
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="80dp"
             android:gravity="center"
             android:text="회원가입"
             android:textColor="#000000"
