--- a/GP_app/app/src/main/res/layout/activity_write_post.xml
+++ b/GP_app/app/src/main/res/layout/activity_write_post.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="제목"
+                android:hint="제목을 입력하세요"
                 android:inputType="textPersonName" />
 
             <LinearLayout
