--- a/GP_app/app/src/main/res/layout/view_contents_edit_text.xml
+++ b/GP_app/app/src/main/res/layout/view_contents_edit_text.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
-    android:lines="17"
+    android:lines="18"
     android:gravity="top"
-    android:hint="내용"
+    android:hint="내용을 입력하세요"
     android:inputType="textMultiLine" />
