update ui, icon
1. ui업데이트
-아이콘 이미지, 앱 이름, 메인 화면, 버튼 backgorund

2. icon업데이트
+지연 아이콘 업데이트

--- a/GP_app/app/src/main/res/layout/activity_write_post.xml
+++ b/GP_app/app/src/main/res/layout/activity_write_post.xml
@@ -81,7 +81,7 @@
                     android:gravity="center"
                     android:hint="인원수 입력"
                     android:layout_marginTop="10dp"
-
+                    android:inputType="number"
                     android:background="@drawable/ic_button_background"/>
 
             </LinearLayout>
