--- a/GP_app/app/src/main/res/layout/view_toolbar.xml
+++ b/GP_app/app/src/main/res/layout/view_toolbar.xml
@@ -8,5 +8,8 @@
     android:elevation="4dp"
     android:theme="@style/AppTheme"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:titleTextColor="#FFFFFF" />
+    app:titleTextColor="#000000">
+
+
+</androidx.appcompat.widget.Toolbar>
 
