--- a/GP_app/app/src/main/res/layout/activity_password_reset.xml
+++ b/GP_app/app/src/main/res/layout/activity_password_reset.xml
@@ -17,12 +17,23 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
             android:gravity="center"
             android:text="비밀번호 재설정"
             android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="80dp"
+            android:text="이메일을 입력하세요"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
