--- a/GP_app/app/src/main/res/layout/fragment_user_info.xml
+++ b/GP_app/app/src/main/res/layout/fragment_user_info.xml
@@ -39,10 +39,11 @@
 
                     <ImageView
                         android:id="@+id/profileImageView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
                         android:adjustViewBounds="true"
-                        android:src="@android:drawable/sym_def_app_icon" />
+                        android:src="@drawable/world"
+                        android:layout_width="150sp"
+                        android:layout_height="150sp"
+                        android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
