--- a/GP_app/app/src/main/res/layout/item_user_list.xml
+++ b/GP_app/app/src/main/res/layout/item_user_list.xml
@@ -24,8 +24,7 @@
                 android:id="@+id/photoImageVIew"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                app:srcCompat="@mipmap/ic_launcher_round" />
+                android:src="@drawable/world" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
