--- a/GP_app/app/src/main/res/layout/item_user_list.xml
+++ b/GP_app/app/src/main/res/layout/item_user_list.xml
@@ -43,10 +43,10 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/addressTextView"
+                android:id="@+id/phonenumTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="경기도" />
+                tools:text="010-1111-2222" />
         </LinearLayout>
 
     </LinearLayout>
