--- a/GP_app/app/src/main/res/layout/fragment_user_info.xml
+++ b/GP_app/app/src/main/res/layout/fragment_user_info.xml
@@ -124,7 +124,7 @@
                         android:text="주소:"/>
 
                     <TextView
-                        android:id="@+id/addressTextView"
+                        android:id="@+id/phonenumTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
